--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <header>
     <div class="navbar">
       <div class="logo">
-        <img src="/Imagenes/logo.png" alt="">
+        <img src="/logo.png" alt="">
       </div>
       <div class="nav">
         <ul>
@@ -38,9 +38,9 @@
       <div class="linea"></div>
     </div>
     <div class="cate">
-      <img src="/Imagenes/1.png" alt="">
-      <img src="/Imagenes/2.png" alt="">
-      <img src="/Imagenes/3.png" alt="">
+      <img src="/1.png" alt="">
+      <img src="/2.png" alt="">
+      <img src="/3.png" alt="">
     </div>
   </section>
   
@@ -53,7 +53,7 @@
     </div>
   <section class="part-1">
     <div class="part-img">
-      <img src="/Imagenes/mascotas-1.png" alt="">
+      <img src="/mascotas-1.png" alt="">
     </div>
     <div class="part-text">
       <h2>La alimentación en tu mascota</h2>
@@ -70,7 +70,7 @@
       </p>
     </div>
     <div class="part-img2">
-      <img src="/Imagenes/7-juliol.jpg" alt="">
+      <img src="/7-juliol.jpg" alt="">
     </div>
   </section>
   
